# simpleTLD

./: CMakeLists.txt  README.md  TLD.py  install.sh
src/libopentld/tld/: DetectorCascade.cpp  EnsembleClassifier.cpp  TLD.cpp  TLD.h
src/opentld/: CMakeLists.txt  OpenTLD.cpp
src/opentld/main/: Config.cpp  Config.h  Gui.cpp  Gui.h  Main.cpp  Main.h  Settings.cpp  Settings.h
